html overflow issue fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,17 +9,17 @@
    scrollbar-width: none; 
 }
 html{
-  height: 100vh;
+  min-height: 100vh;
+  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
 }
-body, html {
+body{
   text-align: center;
   min-width: 375px;
   min-height: 100%;
-  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 }
 header {
   margin-top: 15px;
